Initial commit; Champion information
- Delete unneccessary files from weatherGPT code
- Update weatherGPT specific file paths, domains, comments and code
- Working api/champions?championName=[champion] route with static data from data dragon
